# netcdf

./: .gitignore  .gitmodules  .travis.yml  .typos.toml  COPYING  Cargo.toml  Dockerfile  LICENSE  README.md  THIRD_PARTY
.github/workflows/: ci.yml  codecov.yml  release.yml
benches/: concurrency.rs
cftime/: Cargo.toml
cftime/src/: calendars.rs  constants.rs  datetime_360day.rs  datetime_all_leap.rs  datetime_julian.rs  datetime_no_leap.rs  datetime_prolecpticgregorian.rs  datetimes.rs  durations.rs  lib.rs  macros.rs  main.rs  parser.rs  time.rs  traits.rs  tz.rs
cftime/src/datetimes/: all_leap.rs  day360.rs  factory.rs  julian.rs  mod.rs  no_leap.rs  prolecpticgregorian.rs
examples/: ncdump.rs
netcdf/: Cargo.toml  build.rs
netcdf-derive/: Cargo.toml
netcdf-derive/src/: lib.rs
netcdf-derive/tests/: fails.rs  struct.rs
netcdf-derive/tests/failing/: enumnorepr.rs  enumnorepr.stderr  noreprc.rs  noreprc.stderr  union.rs  union.stderr  unittype.rs  unittype.stderr  unnamedfield.rs  unnamedfield.stderr  unsupportedattributes.rs  unsupportedattributes.stderr
netcdf-examples/: Cargo.toml
netcdf-examples/src/: main.rs  parallel.rs
netcdf-src/: Cargo.toml  README.md  build.rs
netcdf-src/src/: lib.rs
netcdf-sys/: Cargo.toml  README.md  build.rs
netcdf-sys/src/: consts.rs  dispatch.rs  filter.rs  functions.rs  lib.rs  mmap.rs  ncconst.c  netcdf_bindings.rs  netcdf_const.rs  par.rs
netcdf/examples/: ncdump.rs  parallel.rs
netcdf/src/: attribute.rs  dimension.rs  error.rs  extent.rs  file.rs  group.rs  lib.rs  par.rs  putget.rs  rc.rs  types.rs  variable.rs
netcdf/tests/: attributes.rs  file.rs  group.rs  lib.rs  types.rs
netcdf/tests/common/: mod.rs
src/: attribute.rs  dimension.rs  error.rs  extent.rs  file.rs  group.rs  lib.rs  types.rs  variable.rs
testdata/: simple_nc4.nc
tests/: attributes.rs  concurrency.rs  group.rs  lib.rs  types.rs
tests/common/: mod.rs
tests/testdata/: coads_climatology.nc  patmosx_v05r03-preliminary_NOAA-19_asc_d20130630_c20140325.nc
