[workspace]
members = [
    "netcdf",
    "netcdf-sys",
    "netcdf-src",
    "netcdf-derive",
    "netcdf-examples",
]
default-members = ["netcdf", "netcdf-sys"]
resolver = "2"

[workspace.dependencies]
netcdf = { path = "netcdf", version = "0.9.2" }
netcdf-sys = { path = "netcdf-sys", version = "0.6.2" }
netcdf-src = { path = "netcdf-src", version = "0.3.6" }
netcdf-derive = { path = "netcdf-derive", version = "0.1.0" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.9.0" }
mpi-sys = { version = "0.2.1" }
