[package]
name = "cftime"
version = "0.1.0"
authors = [
    "Antoine Gibek <antoine.gibek@ipsl.fr>",
]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georust/netcdf"
keywords = ["netcdf", "time", "calendar"]
description = "Time handling functionality for CF conventions"
categories = ["science"]

[dependencies]
nom = "7.1.1"
