[package]
name = "netcdf-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macro for custom types in netCDF"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.48"
quote = "1.0.35"
proc-macro2 = "1.0.78"
proc-macro-error = "1.0.4"

[dev-dependencies]
netcdf = { path = "../netcdf" }
trybuild = "1.0.89"
