[package]
name = "netcdf-src"
version = "0.1.0"
authors = ["Magnus Ulimoen <magnusu@met.no>"]
edition = "2018"
description = "Build scripts for building `netCDF` from source"
build = "build.rs"
repository = "https://github.com/georust/netcdf"
license-file = "source/COPYRIGHT"
links = "netcdfsrc"
exclude = [
    "source/unit_test/**",
    "source/NUG/**",
    "source/dap4_test/**",
    "source/examples/**",
    "source/nc_test/**",
    "source/h5_test/**",
    "source/nc_perf/**",
    "source/ncdump/**",
    "source/hdf4_test/**",
    "source/ncgen/**",
    "source/ncgen3/**",
    "source/nctest/**",
]

[features]
dap = []

[dependencies]
hdf5-sys = { version = "*", features=["hl", "deprecated", "zlib"] }

[build-dependencies]
cmake = "0.1.42"
