[package]
name = "netcdf-src"
version = "0.4.3"
authors = ["Magnus Ulimoen <magnusu@met.no>"]
edition = "2021"
description = "Build scripts for building `netCDF` from source"
build = "build.rs"
repository = "https://github.com/georust/netcdf"
license-file = "source/COPYRIGHT"
links = "netcdfsrc"
categories = ["filesystem"]
keywords = ["netcdf"]
readme = "README.md"
exclude = [
    "source/docs/doxygen-awesome-css/**",
    "source/docs/images/**",
    "source/docs/old/**",
    "source/NUG/**",
    "source/dap4_test/**",
    "source/examples/**",
    "source/nc_test/**",
    # "source/unit_test/**", https://github.com/Unidata/netcdf-c/pull/3133
    # "source/nc_test4/**", https://github.com/Unidata/netcdf-c/pull/3133
    "source/nc_test4/**.nc",
    "source/h5_test/**",
    "source/nc_perf/**",
    "source/nczarr_test/**",
    "source/hdf5_test/**",
    "source/ncdump/**",
    "source/hdf4_test/**",
    "source/ncgen/**",
    "source/ncgen3/**",
    "source/nctest/**",
    "source/ncdap_test/**",
    "source/nc_perf/**",
]
rust-version = "1.77.0"

[features]
dap = ["dep:link-cplusplus"]
mpi = []

[dependencies]
hdf5-sys = { workspace = true, features = ["hl", "deprecated", "zlib", "static"] }
libz-sys = { version = "1.0.25" }
link-cplusplus = { version = "1.0.9", optional = true }

[build-dependencies]
cmake = "0.1.44"
