[package]
name = "netcdf-sys"
version = "0.5.0"
authors = [
    "Michael Hiley <mhiley@gmail.com>",
    "Magnus Ulimoen <magnusu@met.no>"
]
license = "MIT"
description = "FFI bindings to NetCDF"
repository = "https://github.com/georust/netcdf"
keywords = ["netcdf", "hdf", "hdf5", "cdm", "ffi"]
edition = "2021"
links = "netcdf"
build = "build.rs"
readme = "README.md"
categories = ["ffi", "filesystem", "science"]
exclude = [
    "testdata/**",
]
rust-version = "1.60"

[dependencies]
libz-sys = { version = "1.0.25" }
curl-sys = { version = "0.4.51", optional = true }
hdf5-sys = { version = "0.8.0" }
netcdf-src = { path = "../netcdf-src", version = "0.3.0", optional = true }

[dev-dependencies]
lazy_static = "1.4.0"

[features]
default = []
memio = []
static = ["libz-sys/static", "hdf5-sys/static", "hdf5-sys/hl", "hdf5-sys/deprecated", "hdf5-sys/zlib", "netcdf-src", "curl-sys?/static-curl", "curl-sys?/static-ssl"]
dap = ["dep:curl-sys"]

[build-dependencies]
semver = "1.0.9"

[package.metadata.docs.rs]
features = ["static"]
rustdoc-args = ["--cfg", "docsrs"]
