[package]
name = "netcdf-sys"
version = "0.6.0"
authors = [
    "Michael Hiley <mhiley@gmail.com>",
    "Magnus Ulimoen <magnusu@met.no>"
]
license = "MIT"
description = "FFI bindings to NetCDF"
repository = "https://github.com/georust/netcdf"
keywords = ["netcdf", "hdf", "hdf5", "cdm", "ffi"]
edition = "2021"
links = "netcdf"
build = "build.rs"
readme = "README.md"
categories = ["external-ffi-bindings", "filesystem", "science"]
exclude = [
    "testdata/**",
]
rust-version = "1.70"

[dependencies]
libz-sys = { version = "1.0.25" }
curl-sys = { version = "0.4.51", optional = true }
hdf5-sys = { workspace = true }
netcdf-src = { workspace = true, optional = true }

[dev-dependencies]

[features]
default = []
memio = []
static = ["libz-sys/static", "hdf5-sys/static", "hdf5-sys/hl", "hdf5-sys/deprecated", "hdf5-sys/zlib", "dep:netcdf-src", "curl-sys?/static-curl", "curl-sys?/static-ssl"]
dap = ["dep:curl-sys"]

[build-dependencies]
semver = "1.0.9"

[package.metadata.docs.rs]
features = ["static"]
rustdoc-args = ["--cfg", "docsrs"]
