[package]
name = "netcdf"
version = "0.9.3"
authors = [
    "Michael Hiley <mhiley@gmail.com>",
    "Magnus Ulimoen <magnusu@met.no>"
]
license = "MIT OR Apache-2.0"
description = "High-level NetCDF bindings for Rust"
repository = "https://github.com/georust/netcdf"
keywords = ["netcdf", "hdf", "hdf5", "libnetcdf", "netcdf4"]
edition = "2021"
readme = "../README.md"
categories = ["science", "filesystem"]
exclude = ["examples/**", "tests/**"]
build = "build.rs"

[features]
default = ["ndarray"]
static = ["netcdf-sys/static"]

[dependencies]
ndarray = { version = "0.15", optional = true }
netcdf-sys = { workspace = true }
bitflags = "2.4.2"
libc = "0.2.155"

[dev-dependencies]
clap = { version = "4.5.1", features = ["derive"] }
tempfile = "3.1.0"

[package.metadata.docs.rs]
features = ["static"]
rustdoc-args = ["--cfg", "docsrs"]
